# object_detection

./: README.md
detection_msgs/: CMakeLists.txt  package.xml
detection_msgs/msg/: Detection.msg  DetectionArray.msg
image_processing/: CMakeLists.txt  package.xml
image_processing/include/image_processing/: image_snapshot.h
image_processing/src/: image_snapshot.cpp
image_processing/srv/: Snapshot.srv
object_detection/: CMakeLists.txt  package.xml
object_detection/config/: example.yaml  jackal.yaml  philbart.yaml  pose_estimation.yaml  walrus.yaml
object_detection/launch/: darknet_detection.launch  detection_streamer.launch  object_detection.launch  object_detection_streamer.launch  pose_estimation.launch  retinanet_detection.launch  target_detection.launch
pointcloud_processing/: CMakeLists.txt  package.xml
pointcloud_processing/include/pointcloud_processing/: image_buffer.h  object_detection_streamer.h  object_pose_estimation.h  target_pose_estimation.h
pointcloud_processing/src/: image_buffer.cpp  object_detection_streamer.cpp  object_pose_estimation.cpp  sep_processing.cpp  target_pose_estimation.cpp
target_detection/config/: darknet_ros.yaml  jackal.yaml  pose_estimation.yaml  walrus.yaml
target_detection/launch/: darknet_detection.launch  pose_estimation.launch  retinanet_detection.launch
