<?xml version="1.0"?>
<package format="2">
  <name>image_processing</name>
  <version>0.0.0</version>
  <description>The image_processing package</description>
  <maintainer email="chriswsuarez@utexas.edu">Chris Suarez</maintainer>
  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>sensor_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_srvs</depend>
  <depend>image_transport</depend>
  <depend>message_generation</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
